# dig-gossip

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_LOG.md  README.md  package-lock.json  package.json
.claude/skills/repomix/: SKILL.md
.cursor/: mcp.json
.cursor/rules/: dig-gossip-tests-flat.mdc  documentation-and-comments.mdc  gitnexus.mdc  repomix.mdc
.github/workflows/: ci.yml  publish.yml
crates/dig-protocol/: Cargo.toml
crates/dig-protocol/src/: lib.rs
docs/prompt/: prompt.md  start.md
docs/prompt/tools/: gitnexus.md  repomix.md
docs/requirements/: IMPLEMENTATION_ORDER.md  README.md  REQUIREMENTS_REGISTRY.yaml  SCHEMA.md
docs/requirements/domains/compact_blocks/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/compact_blocks/specs/: CBK-001.md  CBK-002.md  CBK-003.md  CBK-004.md  CBK-005.md  CBK-006.md
docs/requirements/domains/concurrency/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/concurrency/specs/: CNC-001.md  CNC-002.md  CNC-003.md  CNC-004.md  CNC-005.md  CNC-006.md
docs/requirements/domains/connection/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/connection/specs/: CON-001.md  CON-002.md  CON-003.md  CON-004.md  CON-005.md  CON-006.md  CON-007.md  CON-008.md  CON-009.md
docs/requirements/domains/crate_api/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/crate_api/specs/: API-001.md  API-002.md  API-003.md  API-004.md  API-005.md  API-006.md  API-007.md  API-008.md  API-009.md  API-010.md  API-011.md
docs/requirements/domains/crate_structure/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/crate_structure/specs/: STR-001.md  STR-002.md  STR-003.md  STR-004.md  STR-005.md
docs/requirements/domains/discovery/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/discovery/specs/: DSC-001.md  DSC-002.md  DSC-003.md  DSC-004.md  DSC-005.md  DSC-006.md  DSC-007.md  DSC-008.md  DSC-009.md  DSC-010.md  DSC-011.md  DSC-012.md
docs/requirements/domains/erlay/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/erlay/specs/: ERL-001.md  ERL-002.md  ERL-003.md  ERL-004.md  ERL-005.md  ERL-006.md  ERL-007.md  ERL-008.md
docs/requirements/domains/integration/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/integration/specs/: INT-013.md  INT-014.md  INT-015.md
docs/requirements/domains/performance/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/performance/specs/: PRF-001.md  PRF-002.md  PRF-003.md  PRF-004.md  PRF-005.md  PRF-006.md
docs/requirements/domains/plumtree/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/plumtree/specs/: PLT-001.md  PLT-002.md  PLT-003.md  PLT-004.md  PLT-005.md  PLT-006.md  PLT-007.md  PLT-008.md  PLT-009.md
docs/requirements/domains/priority/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/priority/specs/: PRI-001.md  PRI-002.md  PRI-003.md  PRI-004.md  PRI-005.md  PRI-006.md  PRI-007.md  PRI-008.md
docs/requirements/domains/privacy/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/privacy/specs/: PRV-001.md  PRV-002.md  PRV-003.md  PRV-004.md  PRV-005.md  PRV-006.md  PRV-007.md  PRV-008.md  PRV-009.md  PRV-010.md
docs/requirements/domains/relay/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/relay/specs/: RLY-001.md  RLY-002.md  RLY-003.md  RLY-004.md  RLY-005.md  RLY-006.md  RLY-007.md  RLY-008.md
docs/resources/: SPEC.md
src/: constants.rs  error.rs  lib.rs
src/connection/: handshake.rs  inbound_limits.rs  keepalive.rs  listener.rs  mod.rs  outbound.rs  rustls_inbound.rs
src/discovery/: address_manager.rs  address_manager_store.rs  introducer_client.rs  introducer_peers.rs  introducer_register_wire.rs  introducer_wire.rs  mod.rs  node_discovery.rs
src/gossip/: backpressure.rs  broadcaster.rs  compact_block.rs  erlay.rs  message_cache.rs  mod.rs  plumtree.rs  priority.rs  seen_set.rs
src/nat/: discovery.rs  mod.rs  peer_record.rs  transport.rs
src/privacy/: dandelion.rs  mod.rs  tor.rs
src/relay/: mod.rs  relay_client.rs  relay_service.rs  relay_types.rs
src/service/: dig_message.rs  gossip_handle.rs  gossip_service.rs  holdings_announce.rs  mod.rs  peer_pool.rs  state.rs  store_melted.rs
src/types/: config.rs  dig_messages.rs  mod.rs  peer.rs  reputation.rs  stats.rs
src/util/: as_lookup.rs  ip_address.rs  latency.rs  mod.rs
tests/: api_001_tests.rs  api_002_tests.rs  api_003_tests.rs  api_004_tests.rs  api_005_tests.rs  api_006_tests.rs  api_007_tests.rs  api_008_tests.rs  api_009_tests.rs  api_010_tests.rs  api_011_tests.rs  audit_179_gossip_tests.rs  cbk_001_tests.rs  cbk_002_tests.rs  cbk_003_tests.rs  cbk_004_tests.rs  cbk_005_tests.rs  cbk_006_tests.rs  cnc_001_tests.rs  cnc_002_tests.rs  cnc_003_tests.rs  cnc_004_tests.rs  cnc_005_tests.rs  cnc_006_tests.rs  con_001_tests.rs  con_002_ipv6_dualstack_tests.rs  con_002_tests.rs  con_003_tests.rs  con_004_tests.rs  con_005_tests.rs  con_006_tests.rs  con_007_tests.rs  con_008_tests.rs  con_009_tests.rs  dmsg_001_tests.rs  dsc_001_tests.rs  dsc_002_tests.rs  dsc_003_tests.rs  dsc_004_tests.rs  dsc_005_tests.rs  (+84 more)
tests/common/: mod.rs  wss_full_node.rs
