# dig-gossip — Peer-to-peer networking and gossip for the DIG Network L2 blockchain.
#
# Crate manifest — STR-001 (dependencies), STR-004 (feature flags / defaults).
# - Normative: docs/requirements/domains/crate_structure/NORMATIVE.md
# - Specs: docs/requirements/domains/crate_structure/specs/STR-001.md, STR-004.md
# - Master spec: docs/resources/SPEC.md (Sections 1.2, 10.3, 10.4)
#
# Rationale for `chia-sdk-client` shape:
# STR-001 requires both `native-tls` and `rustls` feature forwards to
# `chia-sdk-client/*`. If we hard-coded `features = ["native-tls"]` on the
# dependency itself, `cargo check --no-default-features --features rustls` could
# not cleanly select the rustls backend. We therefore set `default-features = false`
# on the dependency and enable TLS exclusively via our feature flags.
#
# Rationale for optional `siphasher` / `minisketch-rs`:
# STR-001's implementation notes state these are gated behind `compact-blocks`
# and `erlay`. Cargo requires optional dependencies to be activated through
# features; we use the conventional implicit optional-dep features
# (`siphasher`, `minisketch-rs`) from the `[features]` table.

[package]
name = "dig-gossip"
version = "0.10.0"
edition = "2021"
license = "Apache-2.0"
description = "Peer-to-peer networking and gossip for the DIG Network L2 blockchain"
repository = "https://github.com/DIG-Network/dig-gossip"
homepage = "https://github.com/DIG-Network/dig-gossip"
documentation = "https://docs.rs/dig-gossip"
readme = "README.md"
keywords = ["dig-network", "gossip", "p2p", "chia", "blockchain"]
categories = ["network-programming", "cryptography::cryptocurrencies"]

[dependencies]
# DIG peer protocol — superset of chia-protocol, re-exports all chia-* crate types plus
# DIG extension opcodes (200-219), DigMessage, DigMessageType, introducer wire types.
# Single import replaces: chia-protocol, chia-sdk-client, chia-ssl, chia-traits, chia_streamable_macro.
# `dig-peer-protocol` is the rename of the former `dig-protocol` crate (#1383); the crate name in
# code is `dig_peer_protocol`. TLS backends are forwarded through it to chia-sdk-client, so we keep
# `default-features = false` and select the backend exclusively via our own `native-tls` / `rustls`
# feature flags (see the `chia-sdk-client` shape rationale at the top of this manifest).
dig-peer-protocol = { version = "0.2", default-features = false }
# Unified DIG Node peer transport (L7 peer-network spec): mTLS `connect(peer)` over the NAT-traversal
# ladder (direct → UPnP → NAT-PMP → PCP → hole-punch → relay-last) yielding a yamux-multiplexed
# `PeerConnection`, plus `peer_id = SHA256(TLS SPKI DER)` verification, the relay client, and the
# streaming `dig.getAvailability` / `dig.fetchRange` control types. dig-gossip routes its peer links +
# discovery through this so it interops byte-for-byte with dig-node + dig-relay. The gossip ALGORITHMS
# (Plumtree/ERLAY/Dandelion++/compact-blocks) sit unchanged on top of this transport.
#
# Sourcing: dig-nat is published on crates.io (#1214 crates.io cascade), so it is consumed as a plain
# crates.io dependency — NO git source (a git dep would block `cargo publish`). `0.6` adopted the
# dig-tls cutover (#1268/#1280): dig-nat now consumes `dig-tls` for ALL cert/mTLS/peer_id/BLS-binding,
# so `connect(peer, &Arc<NodeCert>, config)` takes a CA-signed `dig_tls::NodeCert` (self-signed certs
# are rejected). It keeps the L7 `connect()` ladder, `PeerConnection`, relay client, and streaming
# control types dig-gossip consumes, and re-exports the dig-tls identity surface (NodeCert, PeerId, …).
# `0.7` is additive (connect_with_runtime/NatRuntime added for the full NAT ladder, #836) — no API
# removed. `0.8` (#1385) is additive too — it adds §5.2 STUN happy-eyeballs reflexive discovery on top
# of the same L7 `connect()` ladder / `PeerConnection` / relay-client / streaming control surface, so
# this is a mechanical re-pin (no API removed).
dig-nat = "0.8"
# The canonical DIG mTLS certificate crate (L00). dig-gossip's dig-nat peer transport now presents a
# CA-signed `dig_tls::NodeCert` (peer_id ↔ BLS-G1 binding, chained to the shipped DigNetwork CA), the
# self-signed→CA-signed cutover. dig-tls is L00 (no DIG deps), so dig-gossip (L20) → dig-tls is a valid
# reference-DOWN edge; consumed from crates.io (no git dep).
dig-tls = "0.1"
# Canonical relay endpoint (`DIG_RELAY_URL`) — consumed from crates.io (#1214). The `>=0.2, <0.5` req
# matches dig-nat 0.5's own dig-constants req, so both resolve to ONE crates.io `dig-constants` (0.4.x)
# and stay in lockstep. `<0.5` guards a future breaking 0.5.
dig-constants = ">=0.2, <0.5"
# Canonical address-family authority (CLAUDE.md §5.2 / SPEC §1.10): `dig_ip::Family` keys the
# IPv6-first candidate ordering and `dig_ip::LocalStack` supplies the local∩peer family INTERSECTION
# so this crate never dials a family the LOCAL host cannot originate on. A leaf crate on crates.io
# (single instance, no DIG deps), so it is depended on directly rather than vendored.
dig-ip = "0.1"
# chia_streamable_macro needed directly because the proc-macro reads Cargo.toml for chia-protocol
# and generates `chia_protocol::` paths at compile time.
chia_streamable_macro = "0.26"
# Required by chia_streamable_macro — the proc-macro panics if these aren't in Cargo.toml.
# Code should import these types through dig-peer-protocol, not directly.
chia-protocol = "0.26"
chia-traits = "0.26"
chia-sha2 = "0.26"
# SHA256(peer TLS SubjectPublicKeyInfo DER) — API-005 / CON-001 peer_id derivation (NIST SHA-256).
sha2 = "0.10"
# Parse peer X.509 after outbound TLS (CON-001) — extract SPKI DER for [`peer_id_from_tls_spki_der`].
x509-parser = "0.16"
# CON-002 dual-stack bind: clear `IPV6_V6ONLY` on the `[::]` listening socket before `listen()` so
# IPv4-mapped connections are accepted alongside native IPv6 on the SAME socket (IPv6-first /
# IPv4-fallback hard rule). `tokio::net::TcpSocket` has no `set_only_v6`, so we build the raw
# socket via `socket2`, configure it, then hand it to Tokio via `TcpListener::from_std`.
socket2 = "0.5"

# Async runtime / WebSocket framing used by upstream client patterns.
tokio = { version = "1", features = ["full"] }
# `native-tls` feature exposes [`MaybeTlsStream::NativeTls`] (required for CON-002 inbound + [`Peer::from_websocket`]).
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
# Inbound TLS termination (CON-002) — paired with `native-tls` / `rustls` features (STR-004).
# Inbound listener (CON-002) uses `native_tls::TlsAcceptor` even when outbound uses rustls — `tokio_tungstenite::MaybeTlsStream::Rustls`
# only wraps **client** `tokio_rustls` streams; [`chia_sdk_client::Peer::from_websocket`] matches `NativeTls` / client `Rustls` (STR-004 note).
native-tls = { version = "0.2", optional = true }
tokio-native-tls = { version = "0.3", optional = true }

# #1371 — Inbound rustls acceptor (CON-009 mTLS on OpenSSL/Linux). dig-node builds this crate with
# `default-features = false, features = ["rustls"]`, so the inbound acceptor must NOT depend on the
# vendored `native-tls` [patch] (which does not propagate through a git dependency — the root cause of
# the "peer cert never requested → peer_id underivable → inbound dropped on Linux" bug). rustls
# requests + captures the client cert directly, sidestepping the [patch] propagation entirely. Pinned
# to the SAME rustls 0.23 + aws_lc_rs backend the vendored `chia-sdk-client` outbound connector uses,
# so ONE rustls resolves across the peer stack.
rustls = { version = "0.23", optional = true, default-features = false, features = ["aws_lc_rs", "std"] }
tokio-rustls = { version = "0.26", optional = true, default-features = false, features = ["aws_lc_rs"] }
rustls-pemfile = { version = "2", optional = true }

# Serialization — address manager persistence, relay JSON, bincode payloads.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# `StreamExt` / `SinkExt` for raw WebSocket framing in CON-002 (before [`chia_sdk_client::Peer`]).
futures-util = "0.3"

# Cancellation tokens for task lifecycle (DSC-006 discovery loop, CNC-004 shutdown).
tokio-util = { version = "0.7", features = ["rt"] }

# Utilities — structured logs, error derives, randomness, LRU caches.
tracing = "0.1"
thiserror = "2"
rand = "0.8"
lru = "0.12"

# Optional: compact block short IDs (SPEC Section 8.2) — feature `compact-blocks`.
siphasher = { version = "1", optional = true }

# Optional: Tor client (SPEC Section 1.9.3) — feature `tor` (NORMATIVE STR-004).
# Kept lightweight via `default-features = false`; enable `tokio` for async integration.
arti-client = { version = "0.41", optional = true, default-features = false, features = ["tokio"] }

# SOCKS5 for Tor and hybrid outbound (feature `tor`).
tokio-socks = { version = "0.5", optional = true }

# CON-003 / CON-008 — Unicode General_Category **Cc** + **Cf** filtering (`sanitize_software_version`).
unicode-general-category = "1.1"

# ERLAY (SPEC Section 8.3) normally relies on a Minisketch binding. The
# canonical crates.io release (`minisketch-rs`) pulls `bindgen`, which collides at
# the Cargo **links** layer with `chia-sdk-client`’s optional `rustls` → `aws-lc-rs`
# (`bindgen`) path — even when `rustls` is disabled — because Cargo still resolves
# optional dependencies. Until that ecosystem friction is fixed (or we adopt a
# pure-Rust sketch implementation), **do not** depend on `minisketch-rs` here.
#
# The `erlay` feature remains a first-class switch for `cfg(feature = "erlay")`
# code (see domain specs under `docs/requirements/domains/erlay/`).

[dev-dependencies]
# Tokio with test-util for time manipulation in discovery loop tests (DSC-006).
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
# CancellationToken for discovery loop tests (DSC-006).
tokio-util = { version = "0.7", features = ["rt"] }
# Used by STR-001 tests to parse and assert on this manifest declaratively.
toml = "0.8"
# Reserved for STR-005 harness / future integration tests.
tempfile = "3"
# TLS test acceptor for CON-001 integration (WSS + handshake + RequestPeers).
native-tls = "0.2"
tokio-native-tls = "0.3"
futures-util = "0.3"
# CON-002 tests: derive expected TLS [`PeerId`] from PEM (mirrors SPKI extraction in CON-001).
x509-parser = "0.16"
# CON-008 tests: assert sanitized outputs contain no Unicode Cc/Cf (same tables Chia uses via `unicodedata`).
unicode-general-category = "1.1"
# Ephemeral self-signed leaf certs for the dig-nat identity/transport conformance tests (INT-016/INT-017)
# — the same kind a node generates on first run — so peer_id derivation + the mux transport are tested
# against a REAL certificate with NO real network.
rcgen = "0.13"

[features]
# STR-004 / SPEC Section 10.3 — production-shaped defaults (Tor remains opt-in via `tor`).
default = ["native-tls", "relay", "erlay", "compact-blocks", "dandelion"]

# TLS backends — forwarded through dig-peer-protocol to chia-sdk-client.
native-tls = [
    "dig-peer-protocol/native-tls",
    "dep:native-tls",
    "dep:tokio-native-tls",
]
rustls = [
    "dig-peer-protocol/rustls",
    "dep:rustls",
    "dep:tokio-rustls",
    "dep:rustls-pemfile",
]

# Relay fallback / introducer flows (SPEC Section 7).
relay = []

# ERLAY — SPEC names `minisketch-rs`; see `[dependencies]` comment: that crate is omitted
# (Cargo `links` / bindgen clash with `chia-sdk-client`’s optional rustls path). The feature
# remains the cfg switch for `gossip/erlay.rs`.
erlay = []

# Compact blocks — enables optional `siphasher`.
compact-blocks = ["dep:siphasher"]

# Dandelion++ — no extra dependencies (PRV-* specs).
dandelion = []

# Tor / SOCKS5 — opt-in only (not in `default`).
tor = ["dep:arti-client", "dep:tokio-socks"]

# CON-002 integration tests dial `wss://` with the same TLS stack as production defaults.
[[test]]
name = "con_002_tests"
path = "tests/con_002_tests.rs"
required-features = ["native-tls"]

# CON-003 includes `connect_to` ↔ listener integration (`test_validation_both_directions`).
[[test]]
name = "con_003_tests"
path = "tests/con_003_tests.rs"
required-features = ["native-tls"]

# CON-004 keepalive + RTT + disconnect hooks (`tests/con_004_tests.rs`).
[[test]]
name = "con_004_tests"
path = "tests/con_004_tests.rs"
required-features = ["native-tls"]

# CON-008: `Handshake.software_version` Cc/Cf sanitization (`sanitize_software_version` + validate path).
[[test]]
name = "con_008_tests"
path = "tests/con_008_tests.rs"

# CON-009: mandatory mTLS (`tests/con_009_tests.rs`).
[[test]]
name = "con_009_tests"
path = "tests/con_009_tests.rs"
required-features = ["native-tls"]

# DSC-001: AddressManager tried/new tables (`tests/dsc_001_tests.rs`).
[[test]]
name = "dsc_001_tests"
path = "tests/dsc_001_tests.rs"

# DSC-002: AddressManager peers-file persistence (`tests/dsc_002_tests.rs`).
[[test]]
name = "dsc_002_tests"
path = "tests/dsc_002_tests.rs"

# DSC-003: DNS seeding via Network::lookup_all (`tests/dsc_003_tests.rs`).
[[test]]
name = "dsc_003_tests"
path = "tests/dsc_003_tests.rs"

# DSC-004: Introducer RequestPeersIntroducer flow (`tests/dsc_004_tests.rs`).
[[test]]
name = "dsc_004_tests"
path = "tests/dsc_004_tests.rs"
required-features = ["native-tls"]

# DSC-005: introducer RegisterPeer / RegisterAck (`tests/dsc_005_tests.rs`).
[[test]]
name = "dsc_005_tests"
path = "tests/dsc_005_tests.rs"
required-features = ["native-tls"]

# Patched `chia-sdk-client`: forwards inbound `RequestPeers` with remote-issued ids to the
# application channel (full-duplex RPC). See `vendor/chia-sdk-client/src/peer.rs`.
[patch.crates-io]
# DSC-005: `RegisterPeer` / `RegisterAck` opcodes 218/219 on `ProtocolMessageTypes` (see vendor/chia-protocol/README.dig-gossip.md).
chia-protocol = { path = "vendor/chia-protocol" }
chia-sdk-client = { path = "vendor/chia-sdk-client" }
# Patched `native-tls`: OpenSSL server acceptor sets CERT_REQUIRED + Chia CA trust for inbound mTLS
# (CON-009). See `vendor/native-tls/README.dig-gossip.md`.
native-tls = { path = "vendor/native-tls" }
